--- a/style.css
+++ b/style.css
@@ -6,7 +6,7 @@
 video {
     object-fit: fill;
     width: 100%;
-    height: 95vh;
+    height: 92vh;
     position: absolute;
     z-index: 1;
     top: 5%;
@@ -30,7 +30,7 @@ img {
 
 .vid-name-container {
     position: absolute;
-    top: 18% ;
+    top: 13% ;
     display: flex;
     justify-content: flex-end;
     align-items: center;
@@ -39,9 +39,9 @@ img {
     padding-right: 8px;
 }
 .vid-name {
-    color:red;
+    color:blue;
     font-weight: 700;
     font-size: 24px;
-    border: 2px solid red;
+    border: 2px solid blue;
     padding: 4px
 }
